# cto-project-template

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  MEMORY.md  README.md  mission.md  pyproject.toml
.claude/: session-handoff.md
.claude/agents/: devops-engineer.md  fullstack-developer.md  qa-engineer.md  security-auditor.md  solution-architect.md
.claude/architecture/: behavioral-patterns.md  dependency-rules.md  mcp-strategy.md
.claude/hooks/: quality-sentinel.sh  skill-auto-activate.py
.claude/memory/permanent/: decisions.md  gotchas.md  reflexion.md
.serena/: project.yml
docs/adr/: ADR_TEMPLATE.md
docs/specs/: SPEC_TEMPLATE.md
